force-app/main/default/objects/LicenseNumberAssignments__c/LicenseNumberAssignments__c.object-meta.xml
<CustomObject>
    <description>PacPoint-MV093019 - Created for PVL phase 1</description>
    <label>License Number Assignments</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Number Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>