force-app/main/default/objects/LicenseNumberAssignments__c/fields/LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber__c</fullName>
    <description>PacPoint-MV082119 - Created for PVL phase 1</description>
    <label>License Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>