force-app/main/default/objects/LicenseNumberAssignments__c/fields/LicensePrefix__c.field-meta.xml
<CustomField>
    <fullName>LicensePrefix__c</fullName>
    <formula>LicenseType__r.LicensePrefix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Prefix</label>
    <type>Text</type>
</CustomField>