force-app/main/default/objects/LicenseNumberAssignments__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV082119 - Created for PVL phase 1</description>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>License Number Assignments</relationshipLabel>
    <relationshipName>License_Number_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>