force-app/main/default/objects/LicenseNumberAssignments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BoardProgram__c</columns>
    <columns>LicenseType__c</columns>
    <columns>LicenseNumber__c</columns>
    <columns>LicensePrefix__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>